CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(anraft)

IF (WIN32)
ELSE (WIN32)

	ADD_SUBDIRECTORY(src/proto)
	ADD_SUBDIRECTORY(src/rafthttp)	
	ADD_SUBDIRECTORY(src/anraft)
	ADD_SUBDIRECTORY(examples/raftexample)


	IF (CMAKE_BUILD_TYPE MATCHES DEBUG)
		#ADD_SUBDIRECTORY(tools/test/functest)
	ENDIF (CMAKE_BUILD_TYPE MATCHES DEBUG)
ENDIF (WIN32)

